--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ overflow: hidden;
     width: 100vw;
     height: 100%;
     position: absolute;
-    top: 74%;
+    top: 73%;
     left: calc(92% - 375px / 2);
     overflow: hidden;
     display: inline-block;
@@ -243,17 +243,17 @@ overflow: hidden;
 }
 
 .intro-header {
-    margin-left: 20px;
+    margin-left: 55px;
     margin-bottom: 0;
-    margin-top: -2px;
+    margin-top: -17px;
 }
 
 .intro-header-span1 {
-    /* display: block; */
+    display: block;
 }
 
 .intro-header-span2 {
-    /* color: #776653; */
+    color: #776653;
 }
 
 .intro-paragraph {
@@ -261,7 +261,7 @@ overflow: hidden;
     width: 100%;
     color: var(--gray);
     margin-bottom: 7px;
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'karla', sans-serif;
     /* font-weight: 700; */
     padding-left: 20px;
     padding-right: 20px;
@@ -299,7 +299,10 @@ overflow: hidden;
     margin-right: 7px;
 }
 
-.languages-container > li {
+.languages-container > li,
+.libraries-container > li,
+.frameworks-container > li,
+.tools-container > li {
     font-size: 13.5px;
 }
 
@@ -345,8 +348,9 @@ overflow: hidden;
     margin-bottom: 26px;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
 }
-
 
 .projects-header {
     margin-top: 10px;
@@ -367,6 +371,10 @@ overflow: hidden;
     position: relative;
     color: var(--gray);
     cursor: pointer;
+}
+
+.project:not(:last-child) {
+    padding-right: 10px;
 }
 
 .project:hover {
@@ -497,7 +505,7 @@ overflow: hidden;
     margin-top: 20px;
     margin-bottom: 0;
     position: relative;
-    left: -76px;
+    left: -88px;
     z-index: 2;
 }
 
@@ -538,7 +546,7 @@ overflow: hidden;
 }
 
 .submenu-icon {
-    color: var(--gold);
+    color: var(--white);
 }
 
 
@@ -618,7 +626,6 @@ nav {
 
 .header-open > span:nth-child(2) {
     display: none;
-
 }
 
 .header-open > span:last-child {
