--- a/styles.css
+++ b/styles.css
@@ -913,8 +913,6 @@ ul {
         height: 141%;
     }
 
-    
-
     .header-menu {
         display: none;
     }
@@ -927,12 +925,17 @@ ul {
 
     .header-nav {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: left;
         padding-left: 0;
-        width: 100%;
+        width: 80.3%;
         margin-bottom: 9px;
         margin-top: 29px;
     }
+
+    .header-nav > li {
+        margin-right: 80px;
+    }
+
 
     .header-link {
         display: inline-block;
@@ -962,7 +965,7 @@ ul {
     }
 
     .intro-header {
-        margin-left: 11px;
+        margin-left: 0px;
         margin-bottom: 0;
         margin-top: -24px;
     }
@@ -979,6 +982,7 @@ ul {
         font-size: 15px;
         font-weight: 400;
         line-height: 1.5;
+        padding: 0;
     }
 
     .intro-img {
@@ -1006,18 +1010,18 @@ ul {
         height: 100%;
         background-image: url(images/border-bottom-reversed.png);
         position: absolute;
-        top: 79%;
-        left: 9%;
-
+        top: 77%;
+        left: 3%;
     }
 
     .divider {
-        width: 20%;
-        margin-left: 133px;
+        width: 75%;
+        margin-left: 98px;
+        height: 1px;
     }
 
     .divider:first-of-type {
-        margin-left: 127px;
+        margin-left: 98px;
     }
 
     .divider:last-of-type {
@@ -1040,33 +1044,34 @@ ul {
     }
 
     .skills {
-        margin-left: 178px;
+        margin-left: 97px;
         font-size: 20px;
     }
 
     .projects-header {
         margin-top: 10px;
-        margin-left: 188px;
+        margin-left: 117px;
         margin-bottom: 16px;
         color: var(--white);
         font-size: 30px;
     }
 
     .project-container {
-        margin-left: 166px;
+        margin-left: 47px;
         width: 50%;
+    }
+
+    .project {
+        width: 15%;
     }
 
     .contact-header {
         font-size: 30px;
-        margin-left: 189px;
+        margin-left: 118px;
         margin-top: 0;
         margin-bottom: 13px;
     }
 
-    .divider {
-        margin-left: 188px;
-    }
 
     .contact-info {
         display: block;
@@ -1076,11 +1081,12 @@ ul {
     .contact-container {
         left: 0px;
         margin-top: 0;
-        margin-left: 189px;
+        margin-left: 120px;
         justify-content: flex-start;
     }
+
     .contact-container > li:not(:last-child) {
-        margin-right: 197px;
+        margin-right: 50px;
     }
 
     .divider-header {
@@ -1095,10 +1101,16 @@ ul {
         font-family: 'Merriweather', sans-serif;
         font-weight: 700;
         font-size: 16px;
+        margin-left: 1px;
     }
 
     .contact-icon {
         color: var(--gray);
+    }
+
+    .email-label {
+        font-weight: 400;
+        margin-left: 5px;
     }
 } 
 
