--- a/styles.css
+++ b/styles.css
@@ -27,198 +27,11 @@ body {
 
 .main {
     width: 100vw;
+    height: 100%;
     margin: 0 auto;
     position: relative;
-
-/*     background: linear-gradient(135deg,
-    rgba(0,0,0,1) 0%,
-    rgba(34,34,34,1) 5%,
-    rgba(60,60,60,1) 10%,
-    rgba(48,48,48,1) 20%,
-    rgba(0,0,0,1) 100%
-); */
- /* slate */
-/* background: linear-gradient(to bottom, rgba(50, 60, 70, 1) 0%, rgba(40, 50, 60, 1) 100%); */
-
-/* granite */
-/* background: linear-gradient(to bottom,   
-rgba(62,62,62,1) 0%,
-rgba(75,75,75,1) 12%,
-rgba(70,70,70,1) 20%,
-rgba(60,60,60,1) 30%,
-rgba(57,57,57,1) 40%,
-rgba(52,52,52,1) 50%,
-rgba(45,45,45,1) 60%,
-rgba(42,42,42,1) 70%,
-rgba(40,40,40,1) 80%,
-rgba(37,37,37,1) 90%,
-rgba(35,35,35,1) 100%
-); */
-
-
-/* background: linear-gradient(135deg,
-rgba(51,51,51,1) 0%,
-rgba(68,68,68,1) 12%,
-rgba(85,85,85,1) 24%,
-rgba(102,102,102,1) 36%,
-rgba(119,119,119,1) 48%,
-rgba(136,136,136,1) 60%,
-rgba(153,153,153,1) 72%,
-rgba(170,170,170,1) 84%,
-rgba(187,187,187,1) 96%,
-rgba(204,204,204,1) 100%
-); */
-
-/* background: linear-gradient(45deg,
-    rgba(0,0,0,1) 0%,
-    rgba(2,2,2,1) 5%,
-    rgba(4,4,4,1) 10%,
-    rgba(6,6,6,1) 15%,
-    rgba(8,8,8,1) 20%,
-    rgba(10,10,10,1) 25%,
-    rgba(12,12,12,1) 30%,
-    rgba(14,14,14,1) 35%,
-    rgba(16,16,16,1) 40%,
-    rgba(18,18,18,1) 45%,
-    rgba(20,20,20,1) 50%,
-    rgba(22,22,22,1) 55%,
-    rgba(24,24,24,1) 60%,
-    rgba(26,26,26,1) 65%,
-    rgba(28,28,28,1) 70%,
-    rgba(30,30,30,1) 75%,
-    rgba(32,32,32,1) 80%,
-    rgba(34,34,34,1) 85%,
-    rgba(36,36,36,1) 100%
-); */
-
-/* background: linear-gradient(125deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(34, 34, 34, 1) 5%,
-    rgba(36, 36, 36, 1) 10%,
-    rgba(38, 38, 38, 1) 15%,
-    rgba(40, 40, 40, 1) 20%,
-    rgba(42, 42, 42, 1) 25%,
-    rgba(44, 44, 44, 1) 30%,
-    rgba(46, 46, 46, 1) 35%,
-    rgba(48, 48, 48, 1) 40%,
-    rgba(50, 50, 50, 1) 45%,
-    rgba(52, 52, 52, 1) 50%,
-    rgba(54, 54, 54, 1) 55%,
-    rgba(56, 56, 56, 1) 60%,
-    rgba(58, 58, 58, 1) 65%,
-    rgba(60, 60, 60, 1) 70%,
-    rgba(62, 62, 62, 1) 75%,
-    rgba(64, 64, 64, 1) 80%,
-    rgba(66, 66, 66, 1) 85%,
-    rgba(68, 68, 68, 1) 90%,
-    rgba(70, 70, 70, 1) 95%,
-    rgba(72, 72, 72, 1) 100%
-); */
-
-/* background: linear-gradient(to bottom,
-rgba(40,40,40,1) 0%,
-rgba(35,35,35,1) 12%,
-rgba(32,32,32,1) 20%,
-rgba(30,30,30,1) 30%,
-rgba(27,27,27,1) 40%,
-rgba(25,25,25,1) 50%,
-rgba(22,22,22,1) 60%,
-rgba(20,20,20,1) 70%,
-rgba(18,18,18,1) 80%,
-rgba(15,15,15,1) 90%,
-rgba(10,10,10,1) 100%
-); */
-
-
-/* background-image: linear-gradient(to right top, #bf7a30, #ca9148, #d5a861, #e1bf7d, #edd599); */
-
-/* background-image: linear-gradient(to right top,
-#000000,
-#333333,
-#666666,
-#999999,
-#cccccc
-); */
-
-
-/* background-image: linear-gradient(to left bottom, 
-  #000000, 
-  #0c0c0c, 
-  #181818, 
-  #242424, 
-  #303030, 
-  #3c3c3c, 
-  #484848, 
-  #545454, 
-  #606060, 
-  #6c6c6c, 
-  #787878, 
-  #848484, 
-  #909090, 
-  #9c9c9c, 
-  #a8a8a8, 
-  #b4b4b4, 
-  #c0c0c0, 
-  #cccccc, 
-  #d8d8d8, 
-  #e4e4e4, 
-  #f0f0f0
-); */
-
-/* background-image: linear-gradient(to top right, 
-  #000000, 
-  #0f0f0f, 
-  #1e1e1e, 
-  #2d2d2d, 
-  #3c3c3c, 
-  #4b4b4b, 
-  #5a5a5a, 
-  #696969, 
-  #787878, 
-  #878787, 
-  #969696, 
-  #a5a5a5, 
-  #b4b4b4, 
-  #c3c3c3, 
-  #d2d2d2, 
-  #e1e1e1, 
-  #f0f0f0
-); */
-
-/* background-image: linear-gradient(45deg,
-#000000, 
-#0c0c0c, 
-#181818, 
-#242424, 
-#303030, 
-#3c3c3c, 
-#484848, 
-#545454
-); */
-
-/* background: linear-gradient(45deg, var(--darkGray), rgb(18, 18, 18) 100%);
- */
-/* background: linear-gradient(45deg, #000 0%, var(--darkGray) 100%); */
-
-
-/* background: linear-gradient(45deg, rgb(18, 18, 18), var(--darkGray) 100%); */
-
-
-
-overflow: hidden;
+    overflow: hidden;
 }
-
-/* .main::after {
-    content: '';
-    position: absolute;
-    width: 100vw;
-    height: 44vh;
-    background-size: auto;
-    transform: translate(4%, -64%);
-    top: 85%;
-    left: -6%;
-    background: url('images/border-bottom.png') no-repeat bottom right;
-} */
 
 .main::after {
     content: '';
@@ -262,7 +75,6 @@ overflow: hidden;
     color: var(--gray);
     margin-bottom: 7px;
     font-family: 'Karla', sans-serif;
-    /* font-weight: 700; */
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -485,8 +297,7 @@ overflow: hidden;
     align-items: center;
     height: 104px;
 }
-
-
+ 
 .contact-header {
     margin-top: -51px;
     margin-left: 20px;
@@ -549,7 +360,6 @@ overflow: hidden;
     color: var(--white);
 }
 
-
 .contact-submenu > li:not(:last-child) {
     margin-bottom: 25px;
 }
@@ -578,7 +388,6 @@ a {
 
 /* span elements that make Hamburger menu */
 
-
 .header-menu {
     height: 1.1875rem;
     margin-left: 86%;
@@ -604,12 +413,6 @@ a {
 .menu-line-1 {
     width: 20px;
 }
-
-/* .menu-line-2 {
-    width: 10px;
-    position: relative;
-    left: 2px;
-} */
 
 .header-menu > span:not(:last-child) {
     margin-bottom: 4px;
@@ -741,7 +544,6 @@ nav {
     margin-bottom: 31.15px;
 }
 
-
 /* Animations for Submenus */
 
 @keyframes open {
@@ -791,12 +593,10 @@ li {
     display: inline-block;
 }
 
-
 ul {
     position: relative;
     top: 2px;
 }
-
 
 .submenu-option {
     width: 69%;
@@ -899,8 +699,98 @@ ul {
     visibility: hidden;
 }
 
-
 /* Media Queries */
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+    .main {
+        height: 100%;
+    }
+
+    .main::after {
+        top: 78%;
+        left: calc(97% - 375px / 2);
+    }
+
+    .intro-header {
+        font-size: 50px;
+    }
+
+    .header-menu {
+        margin-left: 92%;
+    }
+
+    .header-menu > span {
+        width: 30px;
+    }
+
+    .intro-header {
+        margin-left: 96px;
+        margin-top: -32px;
+    }
+
+    .intro-paragraph {
+        width: 85%;
+        margin-left: 95px;
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 23px;
+        margin-bottom: 26px;
+    }
+
+    .skills {
+        width: 80%;
+        margin-left: 75px;
+    }
+
+    .languages-container, .libraries-container, .frameworks-container, .tools-container {
+        margin-left: 21px;
+    }
+
+    .projects-header {
+        margin-left: 95px;
+        font-size: 45px;
+    }
+
+    .skills-header {
+        font-size: 45px;
+        margin-top: 26px;
+    }
+
+    .languages-container > li, .libraries-container > li, .frameworks-container > li, .tools-container > li {
+        font-size: 22px;
+    }
+
+    .project-container {
+        margin-left: 72px;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .contact-header {
+        margin-left: 95px;
+        font-size: 45px;
+        margin-top: -25px;
+    }
+
+    .contact-container {
+        left: -166px;
+        margin-bottom: -63px;
+    }
+
+    .tools-container {
+        margin-bottom: 26px;
+    }
+
+    .projects-header {
+        margin-top: 26px;
+    }
+
+    .contact-info {
+        margin-bottom: 40px;
+    }
+} 
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
@@ -939,7 +829,6 @@ ul {
     .header-nav > li {
         margin-right: 80px;
     }
-
 
     .header-link {
         display: inline-block;
@@ -1076,7 +965,6 @@ ul {
         margin-bottom: 13px;
     }
 
-
     .contact-info {
         display: block;
         margin-bottom: 30px;
@@ -1122,8 +1010,6 @@ ul {
     }
 } 
 
-
-
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .main {
@@ -1138,8 +1024,6 @@ ul {
         margin-bottom: 54px;
         height: 141%;
     }
-
-    
 
     .header-menu {
         display: none;
@@ -1348,8 +1232,6 @@ ul {
     .fa-envelope::before {
         margin-right: 5px;
     }
-
-    
 }
 
 /* Very Large devices (laptops/desktops, 1440px and up) */
@@ -1593,14 +1475,10 @@ ul {
 
 } 
 
-
-
 /* Very Large devices (laptops/desktops, 1920px and up) */
 @media only screen and (min-width: 1920px) {
-
-
     .main {
-        height: 100%;
+        height: 100vh;
         max-width: 100%;
         overflow-x: hidden;
     }
@@ -1834,9 +1712,7 @@ ul {
     .phone-label {
         font-weight: 400;
         font-size: 20px;
-    }
-
-    
+    }    
 }
 
 
