--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 
 .main::after {
     content: '';
-    background-image: url('images/border-bottom.png');
+    background-image: url('Images/border-bottom.png');
     background-repeat: no-repeat;
     width: 100vw;
     height: 100%;
@@ -275,7 +275,7 @@ body {
 }
 
 .project-1 {
-    background-image: url('images/EasyBankLPThumbnail.PNG');
+    background-image: url('Images/EasyBankLPThumbnail.PNG');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -287,7 +287,7 @@ body {
 }
 
 .project-3 {
-    background-image: url('images/E-commerceThumbnail.PNG');
+    background-image: url('Images/E-commerceThumbnail.PNG');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -926,7 +926,7 @@ ul {
         left: 48%;
         overflow: hidden;
         display: inline-block;
-        background-image: url(images/hero-img-desktop.png);
+        background-image: url(Images/hero-img-desktop.png);
         background-size: contain;
     }
 
@@ -935,7 +935,7 @@ ul {
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
-        background-image: url(images/border-bottom-reversed.png);
+        background-image: url(Images/border-bottom-reversed.png);
         position: absolute;
         top: 77%;
         left: 3%;
@@ -1145,7 +1145,7 @@ ul {
         left: 54%;
         overflow: hidden;
         display: inline-block;
-        background-image: url(images/hero-img-desktop.png);
+        background-image: url(Images/hero-img-desktop.png);
         background-size: contain;
     }
 
@@ -1154,7 +1154,7 @@ ul {
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
-        background-image: url(images/border-bottom-reversed.png);
+        background-image: url(Images/border-bottom-reversed.png);
         position: absolute;
         top: 76%;
         left: 2.4%;
@@ -1370,7 +1370,7 @@ ul {
         left: 54%;
         overflow: hidden;
         display: inline-block;
-        background-image: url(images/hero-img-desktop.png);
+        background-image: url(Images/hero-img-desktop.png);
         background-size: contain;
     }
 
@@ -1379,7 +1379,7 @@ ul {
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
-        background-image: url(images/border-bottom-reversed.png);
+        background-image: url(Images/border-bottom-reversed.png);
         position: absolute;
         top: 77%;
         left: 2%;
@@ -1612,7 +1612,7 @@ ul {
         left: 62.7%;
         overflow: hidden;
         display: inline-block;
-        background-image: url(images/hero-img-desktop.png);
+        background-image: url(Images/hero-img-desktop.png);
         background-size: contain;
     }
 
@@ -1621,7 +1621,7 @@ ul {
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
-        background-image: url(images/border-bottom-reversed.png);
+        background-image: url(Images/border-bottom-reversed.png);
         position: absolute;
         top: 76%;
         left: 1.5%;
