--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,52 @@ body {
     font-weight: 600;
 }
 
+/* Intro Submenu  */
+
+.intro-submenu {
+    display: none;
+    margin-top: 0;
+    margin-left: 18px;
+    padding: 0;
+    position: relative;
+    top: -10px;
+    color: var(--gray);
+    animation: open 200ms linear, growDown 200ms linear;
+}
+
+.intro-submenu > li:first-of-type {
+    font-weight: 700;
+    text-decoration: underline;
+    color: var(--gold);
+}
+
+.intro-submenu.show {
+    display: inline-block;
+}
+
+/* Skills Submenu */
+
+.skills-submenu {
+    display: none;
+    width: 100%;
+    max-width: 236px;
+    height: 105px;
+    padding: 0;
+    position: relative;
+    top: -26px;
+    animation: open 200ms linear, growDown 200ms linear;
+    margin-bottom: 20px;
+    padding-top: 6px;
+}
+
+.skills-submenu.show {
+    display: inline-block;
+}
+
+.skills-submenu > .filler-header, .languages-header, .libraries-header, .frameworks-header, .tools-header {  /* Does not work if filler-header class is removed unknown reason */
+    color: var(--gold);
+}
+
 /* Projects Submenu */
 
 .projects-submenu {
@@ -213,7 +259,7 @@ body {
     padding: 0;
     position: relative;
     left: 51px;
-    top: -26px;
+    top: -17px;
     animation: open 200ms linear, growDown 200ms linear;
     margin-bottom: 0px;
     padding-top: 6px;
@@ -267,16 +313,22 @@ body {
 .project > p {
     position: relative;
     z-index: 2;
+    color: var(--orange);
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .project > p:hover {
     color: var(--orange);
     font-weight: 700;
     text-shadow:
-	    -1px -1px 0 #000,
-		1px -1px 0 #000,
-		-1px 1px 0 #000,
-		1px 1px 0 #000;
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .project-1 {
@@ -375,7 +427,7 @@ body {
     height: 105px;
     padding: 0;
     position: relative;
-    left: 17px;
+    left: 19px;
     top: -26px;
     animation: open 200ms linear, growDown 200ms linear;
     margin-bottom: 0px;
@@ -620,6 +672,7 @@ nav {
 .intro-mobile-header {
     margin-top: 150px;
     padding-top: 0;
+    margin-bottom: 15px;
 }
 
 li {
@@ -827,8 +880,6 @@ ul {
     .contact-info {
         margin-bottom: 40px;
     }
-
-
 } 
 
 /* Large devices (laptops/desktops, 992px and up) */
