--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     width: 100vw;
     height: 100%;
     position: absolute;
-    top: 71%;
+    top: 78%;
     left: calc(92% - 375px / 2);
     overflow: hidden;
     display: inline-block;
@@ -382,7 +382,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 104px;
+    height: 74px;
+    margin-top: 10px;
 }
  
 .contact-header {
@@ -394,7 +395,7 @@ body {
 
 .contact-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -407,8 +408,8 @@ body {
     z-index: 2;
 }
 
-.contact-icon:not(:last-child) {
-    margin-right: 0px;
+.contact-icon {
+    margin-right: 20px;
 }
 
 .contact-icon {
@@ -786,6 +787,45 @@ ul {
 
 .has-fade2 {
     visibility: hidden;
+}
+
+/* Contact Form */
+
+#contact-form {
+    margin-left: 20px;
+    margin-right: 36px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+  
+label {
+    display: block;
+    font-weight: bold;
+    color: var(--white);
+}
+  
+input,
+textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+  
+.submitBtn {
+    margin-bottom: 33px;
+    padding: 10px 20px;
+    background-color: var(--darkGray);
+    color: var(--orange);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+.submitBtn:hover {
+    background-color: #45a049;
 }
 
 /* Media Queries */
